--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -27,7 +27,7 @@
 <body>
 
 
-
+<main class="main">
 
   <section id="grid">
 
@@ -39,16 +39,18 @@
 
         <div class="persons-name">
           <p><strong>Daniel Clifford</strong></p>
-          <p>Verified Graduate</p>
+          <p>Verified Graduates</p>
         </div>
       </div>
+
+      <br>
 
       <div class="mention-person-details">
         <p>I received a job offer mid-course, and the subjects I learned were current, if not more so,
           in the company I joined. I honestly feel I got every penny’s worth.
         </p>
-
-        <p>
+        <br>
+        <p class="mention-person-details2">
           “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a
           transition and have heard some people who had an amazing experience here. I signed up
           for the free intro course and found it incredibly fun! I enrolled shortly thereafter.
@@ -81,6 +83,8 @@
       </div>
 
   </section>
+
+</main>
 
 
   Daniel Clifford
